--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
   "license": "ISC",
   "overrides": {
     "autoprefixer": "10.4.5"
-    },
+  },
   "dependencies": {
     "bcrypt": "^5.0.1",
     "colors": "^1.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
