--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,7 @@
 {
   "name": "frontend",
-
-  "proxy": "http://localhost:5000",
   "version": "0.1.0",
+  "proxy": "http://127.0.0.1:5000",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.4",
@@ -53,4 +52,5 @@
       "last 1 safari version"
     ]
   }
+  
 }
