--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "boiler plate",
   "main": "server.js",
-  "type": "module",
   "scripts": {
     "start": "node backend/server",
     "server": "nodemon backend/server --ignore './frontend/'",
@@ -21,15 +20,21 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "colors": "^1.4.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "date-fns": "^2.29.3",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
+    "express-rate-limit": "^6.6.0",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "react-router-bootstrap": "^0.26.2"
+    "path": "^0.12.7",
+    "react-router-bootstrap": "^0.26.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "concurrently": "^7.3.0",
