--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-rate-limit": "^6.6.0",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "mongoose": "^6.5.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
