--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "mongoose": "^6.5.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.8.0",
     "path": "^0.12.7",
     "react-router-bootstrap": "^0.26.2",
     "uuid": "^9.0.0"
